npm install vue

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/xk381796751/gulu-ui/issues"
   },
-  "homepage": "https://github.com/xk381796751/gulu-ui#readme"
+  "homepage": "https://github.com/xk381796751/gulu-ui#readme",
+  "dependencies": {
+    "vue": "^2.6.6"
+  }
 }
